user error resolve